--- a/index.html
+++ b/index.html
@@ -7,220 +7,224 @@
     <title>Planned Planthood</title>
   </head>
   <body>
-    <header>
-      <nav>
-        <!-- Byt div till logotype bild -->
-        <div>Planned Planthood</div>
-        <!-- <img src="/Assets/images/logo.svg" alt="Planned Planthood logotype" class="logotype"> -->
-        <ul class="menu">
-          <li><a href="#" class="menu-link">Hem</a></li>
-          <li><a href="#" class="menu-link">Historik</a></li>
-          <li><a href="#" class="menu-link">Tips</a></li>
-          <li><a href="#" class="menu-link">Kontakt</a></li>
-        </ul>
-      </nav>
-      <h1>Uppskattade växter</h1>
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique,
-        corporis ipsum.
-      </p>
-      <!-- Skapa en grid av detta med 6 kolumner / 2 rader och lägg in alla bilder -->
-      <section class="gallery">
-        <!-- <img src="" alt="">
+    <div class="grid-global-container">
+      <header>
+        <nav>
+          <!-- Byt div till logotype bild -->
+          <div>Planned Planthood</div>
+          <!-- <img src="/Assets/images/logo.svg" alt="Planned Planthood logotype" class="logotype"> -->
+          <ul class="menu">
+            <li><a href="#" class="menu-link">Hem</a></li>
+            <li><a href="#" class="menu-link">Historik</a></li>
+            <li><a href="#" class="menu-link">Tips</a></li>
+            <li><a href="#" class="menu-link">Kontakt</a></li>
+          </ul>
+        </nav>
+        <h1>Uppskattade växter</h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique,
+          corporis ipsum.
+        </p>
+        <!-- Skapa en grid av detta med 6 kolumner / 2 rader och lägg in alla bilder -->
+        <section class="gallery">
+          <!-- <img src="" alt="">
         <img src="" alt="">
         <img src="" alt="">
         <img src="" alt="">
         <img src="" alt="">
         <img src="" alt=""> -->
-      </section>
-    </header>
-    <article class="hero">
-      <h2>Anmäl dig till vårt nyhetsbrev så du inte missar en utsådd!</h2>
-      <!-- Lägg till email input -->
-      <!-- Lägg till icon-image -->
-    </article>
-    <main>
-      <ul class="cards">
-        <li class="card">
-          <img src="" alt="" />
-          <!-- Lägg till kategori-knappar här om tid finns -->
-          <!-- Blommor Ätbart Grönska -->
-          <h3>Gurka</h3>
-          <p>
-            Gurka växer snabbt, är enkel att odla och ger mängder med gurkor,
-            bara man är noga med vattning, omplantering, duschning och gödsling.
-          </p>
-          <!-- Lägg till avatar här om tid finns -->
-          <!-- Coolio 2024-04-01 -->
-        </li>
-        <li class="card">
-          <img src="" alt="" />
-          <!-- Lägg till kategori-knappar här om tid finns -->
-          <!-- Solälskande Lättodlat Ätbart -->
-          <h3>Tomat</h3>
-          <p>
-            En perfekt grönsak att odla på balkongen eller i trädgården. Ger
-            riklig skörd under sommaren.
-          </p>
-          <!-- Lägg till avatar här om tid finns -->
-          <!-- Anna Odlare 2024-12-05-->
-        </li>
-        <li class="card">
-          <img src="" alt="" />
-          <!-- Lägg till kategori-knappar här om tid finns -->
-          <!-- Dekorativ Färgstark Tålig Blommor -->
-          <h3>Pelargon</h3>
-          <p>
-            En vacker och lättskött blomma som trivs både inne och ute under
-            sommaren.
-          </p>
-          <!-- Lägg till avatar här om tid finns -->
-          <!-- Blomsterkalle 2024-12-03-->
-        </li>
-        <li class="card">
-          <img src="" alt="" />
-          <!-- Lägg till kategori-knappar här om tid finns -->
-          <!--  Kryddor Doftande Solälskande -->
-          <h3>Basilika</h3>
-          <p>
-            En fantastisk krydda för pastarätter och sallader. Trivs bäst i ett
-            soligt fönster.
-          </p>
-          <!-- Lägg till avatar här om tid finns -->
-          <!--  Krydd-Malin 2024-12-07-->
-        </li>
-        <li class="card">
-          <img src="" alt="" />
-          <!-- Lägg till kategori-knappar här om tid finns -->
-          <!-- Snabbväxande Ätbart Grönska  -->
-          <h3>Sallad</h3>
-          <p>
-            Sallad är en av de enklaste grönsakerna att odla och ger snabba
-            resultat för färska måltider.
-          </p>
-          <!-- Lägg till avatar här om tid finns -->
-          <!--  Grönis 2024-12-06 -->
-        </li>
-        <li class="card">
-          <img src="" alt="" />
-          <!-- Lägg till kategori-knappar här om tid finns -->
-          <!--  Luftfuktande Grönska Dekorativ  -->
-          <h3>Ormbunke</h3>
-          <p>
-            En klassisk växt som passar perfekt i badrummet eller på skuggiga
-            platser.
-          </p>
-          <!-- Lägg till avatar här om tid finns -->
-          <!--  Naturvännen 2024-12-08  -->
-        </li>
-        <li class="card">
-          <img src="" alt="" />
-          <!-- Lägg till kategori-knappar här om tid finns -->
-          <!-- Blommor Ätbart Grönska -->
-          <h3>Gurka</h3>
-          <p>
-            Gurka växer snabbt, är enkel att odla och ger mängder med gurkor,
-            bara man är noga med vattning, omplantering, duschning och gödsling.
-          </p>
-          <!-- Lägg till avatar här om tid finns -->
-          <!-- Coolio 2024-04-01 -->
-        </li>
-        <li class="card">
-          <img src="" alt="" />
-          <!-- Lägg till kategori-knappar här om tid finns -->
-          <!-- Solälskande Lättodlat Ätbart -->
-          <h3>Tomat</h3>
-          <p>
-            En perfekt grönsak att odla på balkongen eller i trädgården. Ger
-            riklig skörd under sommaren.
-          </p>
-          <!-- Lägg till avatar här om tid finns -->
-          <!-- Anna Odlare 2024-12-05-->
-        </li>
-        <li class="card">
-          <img src="" alt="" />
-          <!-- Lägg till kategori-knappar här om tid finns -->
-          <!-- Dekorativ Färgstark Tålig Blommor -->
-          <h3>Pelargon</h3>
-          <p>
-            En vacker och lättskött blomma som trivs både inne och ute under
-            sommaren.
-          </p>
-          <!-- Lägg till avatar här om tid finns -->
-          <!-- Blomsterkalle 2024-12-03-->
-        </li>
-        <li class="card">
-          <img src="" alt="" />
-          <!-- Lägg till kategori-knappar här om tid finns -->
-          <!--  Kryddor Doftande Solälskande -->
-          <h3>Basilika</h3>
-          <p>
-            En fantastisk krydda för pastarätter och sallader. Trivs bäst i ett
-            soligt fönster.
-          </p>
-          <!-- Lägg till avatar här om tid finns -->
-          <!--  Krydd-Malin 2024-12-07-->
-        </li>
-        <li class="card">
-          <img src="" alt="" />
-          <!-- Lägg till kategori-knappar här om tid finns -->
-          <!-- Snabbväxande Ätbart Grönska  -->
-          <h3>Sallad</h3>
-          <p>
-            Sallad är en av de enklaste grönsakerna att odla och ger snabba
-            resultat för färska måltider.
-          </p>
-          <!-- Lägg till avatar här om tid finns -->
-          <!--  Grönis 2024-12-06 -->
-        </li>
-        <li class="card">
-          <img src="" alt="" />
-          <!-- Lägg till kategori-knappar här om tid finns -->
-          <!--  Luftfuktande Grönska Dekorativ  -->
-          <h3>Ormbunke</h3>
-          <p>
-            En klassisk växt som passar perfekt i badrummet eller på skuggiga
-            platser.
-          </p>
-          <!-- Lägg till avatar här om tid finns -->
-          <!--  Naturvännen 2024-12-08  -->
-        </li>
-      </ul>
-    </main>
-
-    <article class="hero">
-      <!-- Lägg till icon-image -->
-      <h2>Våra tidigare odlingar</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
-        ratione quia eos pariatur deserunt veritatis. Tenetur, ipsum! Iusto
-        delectus ipsam esse pariatur rerum eveniet nostrum, dolor distinctio nam
-        quaerat doloribus?
-      </p>
-      <button>Planterade plantor</button>
-    </article>
-
-    <footer>
-      <!-- Byt div till logotype bild -->
-      <div>Planned Planthood</div>
-      <!-- <img src="/Assets/images/logo.svg" alt="Planned Planthood logotype" class="logotype"> -->
-      <p>
-        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque, veniam
-        ducimus aut sint atque ullam alias perspiciatis fuga. Consequuntur
-        nesciunt ea corrupti aperiam fugit inventore ratione earum. Iure, eius
-        molestias?
-      </p>
-      <!-- Lägg till ikoner i dessa länkar -->
-      <a href="tel:020-1234567">Telefon: 020-1234567</a>
-      <a href="mailto:info@plannedplant.com">info@plannedplant.com</a>
-      <nav>
-        <ul class="menu-footer">
-          <li><a href="#" class="menu-footer-link">Hem</a></li>
-          <li><a href="#" class="menu-footer-link">Historik</a></li>
-          <li><a href="#" class="menu-footer-link">Tips</a></li>
-          <li><a href="#" class="menu-footer-link">Kontakt</a></li>
+        </section>
+      </header>
+      <article class="hero news">
+        <h2>Anmäl dig till vårt nyhetsbrev så du inte missar en utsådd!</h2>
+        <!-- Lägg till email input -->
+        <!-- Lägg till icon-image -->
+      </article>
+      <main>
+        <ul class="cards">
+          <li class="card">
+            <img src="" alt="" />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!-- Blommor Ätbart Grönska -->
+            <h3>Gurka</h3>
+            <p>
+              Gurka växer snabbt, är enkel att odla och ger mängder med gurkor,
+              bara man är noga med vattning, omplantering, duschning och
+              gödsling.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!-- Coolio 2024-04-01 -->
+          </li>
+          <li class="card">
+            <img src="" alt="" />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!-- Solälskande Lättodlat Ätbart -->
+            <h3>Tomat</h3>
+            <p>
+              En perfekt grönsak att odla på balkongen eller i trädgården. Ger
+              riklig skörd under sommaren.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!-- Anna Odlare 2024-12-05-->
+          </li>
+          <li class="card">
+            <img src="" alt="" />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!-- Dekorativ Färgstark Tålig Blommor -->
+            <h3>Pelargon</h3>
+            <p>
+              En vacker och lättskött blomma som trivs både inne och ute under
+              sommaren.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!-- Blomsterkalle 2024-12-03-->
+          </li>
+          <li class="card">
+            <img src="" alt="" />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!--  Kryddor Doftande Solälskande -->
+            <h3>Basilika</h3>
+            <p>
+              En fantastisk krydda för pastarätter och sallader. Trivs bäst i
+              ett soligt fönster.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!--  Krydd-Malin 2024-12-07-->
+          </li>
+          <li class="card">
+            <img src="" alt="" />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!-- Snabbväxande Ätbart Grönska  -->
+            <h3>Sallad</h3>
+            <p>
+              Sallad är en av de enklaste grönsakerna att odla och ger snabba
+              resultat för färska måltider.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!--  Grönis 2024-12-06 -->
+          </li>
+          <li class="card">
+            <img src="" alt="" />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!--  Luftfuktande Grönska Dekorativ  -->
+            <h3>Ormbunke</h3>
+            <p>
+              En klassisk växt som passar perfekt i badrummet eller på skuggiga
+              platser.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!--  Naturvännen 2024-12-08  -->
+          </li>
+          <li class="card">
+            <img src="" alt="" />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!-- Blommor Ätbart Grönska -->
+            <h3>Gurka</h3>
+            <p>
+              Gurka växer snabbt, är enkel att odla och ger mängder med gurkor,
+              bara man är noga med vattning, omplantering, duschning och
+              gödsling.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!-- Coolio 2024-04-01 -->
+          </li>
+          <li class="card">
+            <img src="" alt="" />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!-- Solälskande Lättodlat Ätbart -->
+            <h3>Tomat</h3>
+            <p>
+              En perfekt grönsak att odla på balkongen eller i trädgården. Ger
+              riklig skörd under sommaren.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!-- Anna Odlare 2024-12-05-->
+          </li>
+          <li class="card">
+            <img src="" alt="" />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!-- Dekorativ Färgstark Tålig Blommor -->
+            <h3>Pelargon</h3>
+            <p>
+              En vacker och lättskött blomma som trivs både inne och ute under
+              sommaren.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!-- Blomsterkalle 2024-12-03-->
+          </li>
+          <li class="card">
+            <img src="" alt="" />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!--  Kryddor Doftande Solälskande -->
+            <h3>Basilika</h3>
+            <p>
+              En fantastisk krydda för pastarätter och sallader. Trivs bäst i
+              ett soligt fönster.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!--  Krydd-Malin 2024-12-07-->
+          </li>
+          <li class="card">
+            <img src="" alt="" />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!-- Snabbväxande Ätbart Grönska  -->
+            <h3>Sallad</h3>
+            <p>
+              Sallad är en av de enklaste grönsakerna att odla och ger snabba
+              resultat för färska måltider.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!--  Grönis 2024-12-06 -->
+          </li>
+          <li class="card">
+            <img src="" alt="" />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!--  Luftfuktande Grönska Dekorativ  -->
+            <h3>Ormbunke</h3>
+            <p>
+              En klassisk växt som passar perfekt i badrummet eller på skuggiga
+              platser.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!--  Naturvännen 2024-12-08  -->
+          </li>
         </ul>
-      </nav>
-    </footer>
+      </main>
+
+      <article class="hero plants">
+        <!-- Lägg till icon-image -->
+        <h2>Våra tidigare odlingar</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
+          ratione quia eos pariatur deserunt veritatis. Tenetur, ipsum! Iusto
+          delectus ipsam esse pariatur rerum eveniet nostrum, dolor distinctio
+          nam quaerat doloribus?
+        </p>
+        <button>Planterade plantor</button>
+      </article>
+
+      <footer>
+        <!-- Byt div till logotype bild -->
+        <div>Planned Planthood</div>
+        <!-- <img src="/Assets/images/logo.svg" alt="Planned Planthood logotype" class="logotype"> -->
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque,
+          veniam ducimus aut sint atque ullam alias perspiciatis fuga.
+          Consequuntur nesciunt ea corrupti aperiam fugit inventore ratione
+          earum. Iure, eius molestias?
+        </p>
+        <!-- Lägg till ikoner i dessa länkar -->
+        <a href="tel:020-1234567">Telefon: 020-1234567</a>
+        <a href="mailto:info@plannedplant.com">info@plannedplant.com</a>
+        <nav>
+          <ul class="menu-footer">
+            <li><a href="#" class="menu-footer-link">Hem</a></li>
+            <li><a href="#" class="menu-footer-link">Historik</a></li>
+            <li><a href="#" class="menu-footer-link">Tips</a></li>
+            <li><a href="#" class="menu-footer-link">Kontakt</a></li>
+          </ul>
+        </nav>
+      </footer>
+    </div>
   </body>
 </html>
