Working with nav-menu. Add flexbox for the layout and designed the links with right color and style.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,18 @@
   <body>
     <div class="grid-global-container">
       <header>
-        <nav>
-          <!-- Byt div till logotype bild -->
-          <div>Planned Planthood</div>
-          <!-- <img src="/Assets/images/logo.svg" alt="Planned Planthood logotype" class="logotype"> -->
-          <ul class="menu">
+        <nav class="padding-global">
+          <aside class="border">
+            <img
+              height="40"
+              src="/Assets/images/logo.svg"
+              alt="Planned Planthood logotype"
+              class="logotype"
+            />
+            <p>Planned Planthood</p>
+          </aside>
+
+          <ul role="list" class="menu">
             <li><a href="#" class="menu-link">Hem</a></li>
             <li><a href="#" class="menu-link">Historik</a></li>
             <li><a href="#" class="menu-link">Tips</a></li>
