Add images to gallery section and write alt-description for every images

--- a/index.html
+++ b/index.html
@@ -33,13 +33,31 @@
           corporis ipsum.
         </p>
         <!-- Skapa en grid av detta med 6 kolumner / 2 rader och lägg in alla bilder -->
-        <section class="gallery">
-          <!-- <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt="">
-        <img src="" alt=""> -->
+        <section class="gallery border">
+          <img
+            src="/Assets/images/gallery/gallery-img1.jpg"
+            alt="Maskros som hålls upp mot ljuset"
+          />
+          <img
+            src="/Assets/images/gallery/gallery-img2.jpg"
+            alt="En näve hallon i en hand"
+          />
+          <img
+            src="/Assets/images/gallery/gallery-img3.jpg"
+            alt="Kaktus mot rosa bakgrund"
+          />
+          <img
+            src="/Assets/images/gallery/gallery-img4.jpg"
+            alt="Lila blommor med vattendroppar på sig"
+          />
+          <img
+            src="/Assets/images/gallery/gallery-img5.jpg"
+            alt="Glasburk med gröna växter i"
+          />
+          <img
+            src="/Assets/images/gallery/gallery-img6.jpg"
+            alt="Orange blomma"
+          />
         </section>
       </header>
       <article class="hero news">
