Update the html structure. Header contains nav and the gallery, heading and info-text creates a hero-area outside the header

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
   </head>
   <body>
     <div class="grid-global-container">
-      <header>
-        <nav class="padding-global">
+      <!-- Header with menu -->
+      <header class="padding-global">
+        <nav>
           <aside class="border">
             <img
               height="40"
@@ -27,13 +28,17 @@
             <li><a href="#" class="menu-link">Kontakt</a></li>
           </ul>
         </nav>
+      </header>
+
+      <!-- Hero-section -->
+      <article class="hero padding-global">
         <h1>Uppskattade växter</h1>
         <p>
           Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique,
           corporis ipsum.
         </p>
         <!-- Skapa en grid av detta med 6 kolumner / 2 rader och lägg in alla bilder -->
-        <section class="gallery border">
+        <!-- <section class="gallery border">
           <img
             src="/Assets/images/gallery/gallery-img1.jpg"
             alt="Maskros som hålls upp mot ljuset"
@@ -58,9 +63,10 @@
             src="/Assets/images/gallery/gallery-img6.jpg"
             alt="Orange blomma"
           />
-        </section>
-      </header>
-      <article class="hero news">
+        </section> -->
+      </article>
+
+      <article class="newsletter">
         <h2>Anmäl dig till vårt nyhetsbrev så du inte missar en utsådd!</h2>
         <!-- Lägg till email input -->
         <!-- Lägg till icon-image -->
@@ -216,7 +222,7 @@
         </ul>
       </main>
 
-      <article class="hero plants">
+      <article class="plants-inspiration">
         <!-- Lägg till icon-image -->
         <h2>Våra tidigare odlingar</h2>
         <p>
