Add global grid-wrapper

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <div class="grid-global-container">
       <!-- Header with menu -->
-      <header class="padding-global">
-        <nav>
+      <header class="grid-wrapper">
+        <nav class="border">
           <aside class="border">
             <!-- <img
               height="40"
