Start working with productcards. Add grid and images.

--- a/index.html
+++ b/index.html
@@ -87,9 +87,12 @@
         </aside>
       </article>
       <main>
-        <ul class="cards">
+        <ul role="list" class="cards grid-wrapper">
           <li class="card">
-            <img src="" alt="" />
+            <img
+              src="/Assets/images/products/gurka.jpg"
+              alt="Produktbild på gurkor"
+            />
             <!-- Lägg till kategori-knappar här om tid finns -->
             <!-- Blommor Ätbart Grönska -->
             <h3>Gurka</h3>
@@ -102,7 +105,10 @@
             <!-- Coolio 2024-04-01 -->
           </li>
           <li class="card">
-            <img src="" alt="" />
+            <img
+              src="/Assets/images/products/tomat.jpg"
+              alt="Produktbild på tomater"
+            />
             <!-- Lägg till kategori-knappar här om tid finns -->
             <!-- Solälskande Lättodlat Ätbart -->
             <h3>Tomat</h3>
@@ -114,7 +120,10 @@
             <!-- Anna Odlare 2024-12-05-->
           </li>
           <li class="card">
-            <img src="" alt="" />
+            <img
+              src="/Assets/images/products/pelargon.jpg"
+              alt="Produktbild på rosa pelargoner"
+            />
             <!-- Lägg till kategori-knappar här om tid finns -->
             <!-- Dekorativ Färgstark Tålig Blommor -->
             <h3>Pelargon</h3>
@@ -126,7 +135,10 @@
             <!-- Blomsterkalle 2024-12-03-->
           </li>
           <li class="card">
-            <img src="" alt="" />
+            <img
+              src="/Assets/images/products/basilika.jpg"
+              alt="Produktbild på basilika"
+            />
             <!-- Lägg till kategori-knappar här om tid finns -->
             <!--  Kryddor Doftande Solälskande -->
             <h3>Basilika</h3>
@@ -138,7 +150,10 @@
             <!--  Krydd-Malin 2024-12-07-->
           </li>
           <li class="card">
-            <img src="" alt="" />
+            <img
+              src="/Assets/images/products/sallad.jpg"
+              alt="Produktbild på isbergssallad"
+            />
             <!-- Lägg till kategori-knappar här om tid finns -->
             <!-- Snabbväxande Ätbart Grönska  -->
             <h3>Sallad</h3>
@@ -150,7 +165,10 @@
             <!--  Grönis 2024-12-06 -->
           </li>
           <li class="card">
-            <img src="" alt="" />
+            <img
+              src="/Assets/images/products/ormbunke.jpg"
+              alt="Produktbild på ormbunke"
+            />
             <!-- Lägg till kategori-knappar här om tid finns -->
             <!--  Luftfuktande Grönska Dekorativ  -->
             <h3>Ormbunke</h3>
