--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="grid-area-container">
       <!-- Header with logotype and menu -->
-      <header class="flex-justify-center-container flex-align-center">
+      <header class="flex-justify-center-container">
         <nav class="max-width">
           <aside class="logotype-container">
             <img
@@ -33,36 +33,63 @@
         </nav>
       </header>
 
-      <footer class="flex-center-container">
-        <aside class="border logotype-container">
-          <img
-            height="40"
-            src="/Assets/images/logo.svg"
-            alt="Planned Planthood logotype"
-            class="logotype-img"
-          />
-          <div class="logotype-text">
-            <p>Planned</p>
-            <p>Planthood</p>
-          </div>
-        </aside>
-        <p>
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque,
-          veniam ducimus aut sint atque ullam alias perspiciatis fuga.
-          Consequuntur nesciunt ea corrupti aperiam fugit inventore ratione
-          earum. Iure, eius molestias?
-        </p>
-        <!-- Lägg till ikoner i dessa länkar -->
-        <a href="tel:020-1234567">Telefon: 020-1234567</a>
-        <a href="mailto:info@plannedplant.com">info@plannedplant.com</a>
-        <nav>
-          <ul class="menu-footer">
-            <li><a href="#" class="menu-footer-link">Hem</a></li>
-            <li><a href="#" class="menu-footer-link">Historik</a></li>
-            <li><a href="#" class="menu-footer-link">Tips</a></li>
-            <li><a href="#" class="menu-footer-link">Kontakt</a></li>
-          </ul>
-        </nav>
+      <footer class="flex-justify-center-container">
+        <div class="display-flex flex-space-between max-width">
+          <article class="contact-info display-flex flex-column gap-standard">
+            <aside class="logotype-container">
+              <img
+                height="40"
+                src="/Assets/images/logo.svg"
+                alt="Planned Planthood logotype"
+                class="logotype-img"
+              />
+              <div class="logotype-text">
+                <p>Planned</p>
+                <p>Planthood</p>
+              </div>
+            </aside>
+            <p>
+              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Neque,
+              veniam ducimus aut sint atque ullam alias perspiciatis fuga.
+              Consequuntur nesciunt ea corrupti aperiam fugit inventore ratione
+              earum. Iure, eius molestias?
+            </p>
+            <!-- Justera ikonerna så att det blir bättre format -->
+
+            <a
+              href="tel:020-1234567"
+              class="display-flex gap-xs align-items-center"
+              ><img
+                height="15"
+                src="/Assets/images/icon-phone.svg"
+                alt="Ikon telefon"
+              />Telefon: 020-1234567</a
+            >
+
+            <a
+              href="mailto:info@plannedplant.com"
+              class="display-flex gap-xs align-items-center"
+            >
+              <img
+                height="15"
+                src="/Assets/images/icon-email.svg"
+                alt="Ikon e-mail"
+              />info@plannedplant.com</a
+            >
+          </article>
+
+          <nav>
+            <ul
+              role="list"
+              class="menu-footer display-flex flex-column gap-standard"
+            >
+              <li><a href="#" class="menu-footer-link">Hem</a></li>
+              <li><a href="#" class="menu-footer-link">Historik</a></li>
+              <li><a href="#" class="menu-footer-link">Tips</a></li>
+              <li><a href="#" class="menu-footer-link">Kontakt</a></li>
+            </ul>
+          </nav>
+        </div>
       </footer>
     </div>
   </body>
