Add svg-file for green logo. Update to the green logotype in header.

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
           <aside class="logotype-container">
             <img
               height="40"
-              src="/Assets/images/logo.svg"
+              src="/Assets/images/logo-accent-clr.svg"
               alt="Planned Planthood logotype"
-              class="logotype-img border"
+              class="logotype-img"
             />
             <div class="logotype-text">
               <p>Planned</p>
