Update hero section with the new flex and grid global containers. Add image gallery with 12 columns grid layout.

--- a/index.html
+++ b/index.html
@@ -33,6 +33,53 @@
         </nav>
       </header>
 
+      <!-- Hero-section -->
+      <section class="top-hero flex-justify-center-container">
+        <h1>Uppskattade växter</h1>
+        <p>
+          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Similique,
+          corporis ipsum.
+        </p>
+        <!-- Gallery with grid 12 columns layout -->
+        <article class="gallery max-width grid-col-12">
+          <img
+            class="gallery-img"
+            src="/Assets/images/gallery/gallery-img1.jpg"
+            alt="Maskros som hålls upp mot ljuset"
+          />
+
+          <img
+            class="gallery-img"
+            src="/Assets/images/gallery/gallery-img2.jpg"
+            alt="En näve hallon i en hand"
+          />
+
+          <img
+            class="gallery-img"
+            src="/Assets/images/gallery/gallery-img3.jpg"
+            alt="Kaktus mot rosa bakgrund"
+          />
+
+          <img
+            class="gallery-img"
+            src="/Assets/images/gallery/gallery-img4.jpg"
+            alt="Lila blommor med vattendroppar på sig"
+          />
+
+          <img
+            class="gallery-img"
+            src="/Assets/images/gallery/gallery-img5.jpg"
+            alt="Gröna bladväxter"
+          />
+
+          <img
+            class="gallery-img"
+            src="/Assets/images/gallery/gallery-img6.jpg"
+            alt="Orange blomma"
+          />
+        </article>
+      </section>
+
       <footer class="flex-justify-center-container">
         <div class="display-flex flex-space-between max-width">
           <article class="contact-info display-flex flex-column gap-standard">
