Add subscribe section with form for email input and image with icon and circle background

--- a/index.html
+++ b/index.html
@@ -80,6 +80,44 @@
         </article>
       </section>
 
+      <section class="newsletter flex-justify-center-container">
+        <article class="max-width">
+          <form action="" class="subscribe-form">
+            <h2>Anmäl dig till vårt nyhetsbrev så du inte missar en utsådd!</h2>
+            <!-- Förbättra detta för god tillgänglighet. Nu är allt bara utskrivet visuellt -->
+            <div class="input-container">
+              <label for="email" class="visually-hidden"
+                >Ange din e-mail:
+              </label>
+              <input
+                class="email-input"
+                type="email"
+                id="email"
+                placeholder="email@domain.com"
+                pattern=".+@example\.com"
+                required
+              />
+              <input
+                type="submit"
+                value="Skicka"
+                class="btn cta-btn text-uppercase submit-input"
+              />
+            </div>
+          </form>
+
+          <figure class="circle-background">
+            <img
+              height="90"
+              src="/Assets/images/icon-planting.svg"
+              alt="Fröpåse som det hälls frön ifrån. Planetering pågår."
+            />
+          </figure>
+        </article>
+      </section>
+
+      <main>MAIN MED PRODUKTLISTA</main>
+      <section class="plants-inspiration"></section>
+
       <footer class="flex-justify-center-container">
         <div class="display-flex flex-space-between max-width">
           <article class="contact-info display-flex flex-column gap-standard">
