Add inspiration section with icon and circle background, text area and button. Combines grid and flex to achieve the right layout.

--- a/index.html
+++ b/index.html
@@ -80,8 +80,9 @@
         </article>
       </section>
 
+      <!-- Subscribe section -->
       <section class="newsletter flex-justify-center-container">
-        <article class="max-width">
+        <article class="max-width display-flex flex-center">
           <form action="" class="subscribe-form">
             <h2>Anmäl dig till vårt nyhetsbrev så du inte missar en utsådd!</h2>
             <!-- Förbättra detta för god tillgänglighet. Nu är allt bara utskrivet visuellt -->
@@ -115,8 +116,33 @@
         </article>
       </section>
 
+      <!-- Main with productlist / productcards -->
+
       <main>MAIN MED PRODUKTLISTA</main>
-      <section class="plants-inspiration"></section>
+
+      <!-- Inspiration section -->
+      <section class="plants-inspiration flex-justify-center-container">
+        <article class="max-width display-flex flex-center">
+          <figure class="circle-background">
+            <img
+              height="90"
+              src="/Assets/images/icon-seedling.svg"
+              alt="Ikon av en krukväxt"
+            />
+          </figure>
+
+          <section class="inspiration-textbox">
+            <h2>Våra tidigare odlingar</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Aspernatur ratione quia eos pariatur deserunt veritatis. Tenetur,
+              ipsum! Iusto delectus ipsam esse pariatur rerum eveniet nostrum,
+              dolor distinctio nam quaerat doloribus?
+            </p>
+            <button class="btn cta-btn">Planterade plantor</button>
+          </section>
+        </article>
+      </section>
 
       <footer class="flex-justify-center-container">
         <div class="display-flex flex-space-between max-width">
