Add grid and flex containers to main/productlist (cards), add hover effect on buttons and update hover-effect on menu-links in header

--- a/index.html
+++ b/index.html
@@ -118,7 +118,193 @@
 
       <!-- Main with productlist / productcards -->
 
-      <main>MAIN MED PRODUKTLISTA</main>
+      <main class="flex-justify-center-container">
+        <ul role="list" class="cards max-width border grid-col-12">
+          <li class="card">
+            <img
+              src="/Assets/images/products/gurka.jpg"
+              alt="Produktbild på gurkor"
+            />
+            <!-- <button class="btn">Blommor</button>
+            <button class="btn">Ätbart</button>
+            <button class="btn">Grönska</button> -->
+            <h3>Gurka</h3>
+            <p>
+              Gurka växer snabbt, är enkel att odla och ger mängder med gurkor,
+              bara man är noga med vattning, omplantering, duschning och
+              gödsling.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!-- Coolio 2024-04-01 -->
+          </li>
+          <li class="card">
+            <img
+              src="/Assets/images/products/tomat.jpg"
+              alt="Produktbild på tomater"
+            />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!-- Solälskande Lättodlat Ätbart -->
+            <h3>Tomat</h3>
+            <p>
+              En perfekt grönsak att odla på balkongen eller i trädgården. Ger
+              riklig skörd under sommaren.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!-- Anna Odlare 2024-12-05-->
+          </li>
+          <li class="card">
+            <img
+              src="/Assets/images/products/pelargon.jpg"
+              alt="Produktbild på rosa pelargoner"
+            />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!-- Dekorativ Färgstark Tålig Blommor -->
+            <h3>Pelargon</h3>
+            <p>
+              En vacker och lättskött blomma som trivs både inne och ute under
+              sommaren.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!-- Blomsterkalle 2024-12-03-->
+          </li>
+          <li class="card">
+            <img
+              src="/Assets/images/products/basilika.jpg"
+              alt="Produktbild på basilika"
+            />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!--  Kryddor Doftande Solälskande -->
+            <h3>Basilika</h3>
+            <p>
+              En fantastisk krydda för pastarätter och sallader. Trivs bäst i
+              ett soligt fönster.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!--  Krydd-Malin 2024-12-07-->
+          </li>
+          <li class="card">
+            <img
+              src="/Assets/images/products/sallad.jpg"
+              alt="Produktbild på isbergssallad"
+            />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!-- Snabbväxande Ätbart Grönska  -->
+            <h3>Sallad</h3>
+            <p>
+              Sallad är en av de enklaste grönsakerna att odla och ger snabba
+              resultat för färska måltider.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!--  Grönis 2024-12-06 -->
+          </li>
+          <li class="card">
+            <img
+              src="/Assets/images/products/ormbunke.jpg"
+              alt="Produktbild på ormbunke"
+            />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!--  Luftfuktande Grönska Dekorativ  -->
+            <h3>Ormbunke</h3>
+            <p>
+              En klassisk växt som passar perfekt i badrummet eller på skuggiga
+              platser.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!--  Naturvännen 2024-12-08  -->
+          </li>
+          <li class="card">
+            <img
+              src="/Assets/images/products/gurka.jpg"
+              alt="Produktbild på gurkor"
+            />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!-- Blommor Ätbart Grönska -->
+            <h3>Gurka</h3>
+            <p>
+              Gurka växer snabbt, är enkel att odla och ger mängder med gurkor,
+              bara man är noga med vattning, omplantering, duschning och
+              gödsling.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!-- Coolio 2024-04-01 -->
+          </li>
+          <li class="card">
+            <img
+              src="/Assets/images/products/tomat.jpg"
+              alt="Produktbild på tomater"
+            />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!-- Solälskande Lättodlat Ätbart -->
+            <h3>Tomat</h3>
+            <p>
+              En perfekt grönsak att odla på balkongen eller i trädgården. Ger
+              riklig skörd under sommaren.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!-- Anna Odlare 2024-12-05-->
+          </li>
+          <li class="card">
+            <img
+              src="/Assets/images/products/pelargon.jpg"
+              alt="Produktbild på rosa pelargoner"
+            />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!-- Dekorativ Färgstark Tålig Blommor -->
+            <h3>Pelargon</h3>
+            <p>
+              En vacker och lättskött blomma som trivs både inne och ute under
+              sommaren.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!-- Blomsterkalle 2024-12-03-->
+          </li>
+          <li class="card">
+            <img
+              src="/Assets/images/products/basilika.jpg"
+              alt="Produktbild på basilika"
+            />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!--  Kryddor Doftande Solälskande -->
+            <h3>Basilika</h3>
+            <p>
+              En fantastisk krydda för pastarätter och sallader. Trivs bäst i
+              ett soligt fönster.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!--  Krydd-Malin 2024-12-07-->
+          </li>
+          <li class="card">
+            <img
+              src="/Assets/images/products/sallad.jpg"
+              alt="Produktbild på isbergssallad"
+            />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!-- Snabbväxande Ätbart Grönska  -->
+            <h3>Sallad</h3>
+            <p>
+              Sallad är en av de enklaste grönsakerna att odla och ger snabba
+              resultat för färska måltider.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!--  Grönis 2024-12-06 -->
+          </li>
+          <li class="card">
+            <img
+              src="/Assets/images/products/ormbunke.jpg"
+              alt="Produktbild på ormbunke"
+            />
+            <!-- Lägg till kategori-knappar här om tid finns -->
+            <!--  Luftfuktande Grönska Dekorativ  -->
+            <h3>Ormbunke</h3>
+            <p>
+              En klassisk växt som passar perfekt i badrummet eller på skuggiga
+              platser.
+            </p>
+            <!-- Lägg till avatar här om tid finns -->
+            <!--  Naturvännen 2024-12-08  -->
+          </li>
+        </ul>
+      </main>
 
       <!-- Inspiration section -->
       <section class="plants-inspiration flex-justify-center-container">
